refactor: replace .toList() with .collect(Collectors.toList()) to avoid unmodifiable lists